# wilma-school-ai

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  hacs.json  install.ps1  install.sh  requirements.txt  wilma-cli  wilma-cli.cmd
.github/workflows/: pii-scan.yml
cli/: __main__.py
custom_components/wilma_school_ai/: __init__.py  calendar.py  client.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/wilma_school_ai/translations/: en.json  fi.json
docs/: how-it-works.md  troubleshooting.md
examples/: automations.yaml  configuration.yaml  lovelace_cards.yaml  rest_sensors.yaml
scripts/: pre-commit  scan_pii.py
services/parser/: Dockerfile  pyproject.toml
services/parser/app/: correlation.py  dateguard.py  filter.py  llm.py  main.py  prompt.py  store.py  timehint.py
services/parser/tests/: test_parser.py
services/parser/tests/fixtures/: synthetic_messages.json
